# radlnavi

./: .gitignore  LICENSE  README.md  build.sh  build_and_run_locally.sh  cloudbuild.yaml  compose.yaml
backend/: Dockerfile  bike.lua  build.sh  cloudbuild.yaml  gcloud-deployment.yaml  pyproject.toml
backend/src/: app.py  build.py  geo_store.py  pbf_handler.py
frontend/: Dockerfile  README.md  build.sh  cloudbuild.yaml  collapse.afdesign  expand.afdesign  load_munichways.mjs  logo.afdesign  logo.afphoto  package-lock.json  package.json
frontend/design/: arrive.afdesign  maneuver_left.afdesign  maneuver_right.afdesign  maneuver_slight_left.afdesign  maneuver_slight_right.afdesign  maneuver_straight.afdesign  marker-end.afdesign  marker-start.afdesign  marker-start.afdesign~lock~  marker-user.afdesign  navigation.afdesign
frontend/public/: index.html  manifest.json  marker-icon-2x-green.png:Zone.Identifier  marker-icon-2x-red.png:Zone.Identifier  marker-icon-green.png:Zone.Identifier  marker-icon-red.png:Zone.Identifier  munichways.json  region.json
frontend/src/: App.css  App.tsx  RotatedMarker.tsx  index.tsx
routing/: Dockerfile  README.md  cloudbuild.yaml  gcloud-deployment.yaml
