[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Florian Schnell <floschnell@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
osmium = "^3.7.0"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
